[metadata]
name = runexp
version = 0.1.0
description = Experiment configuration and runner package
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    hydra-core
    omegaconf
python_requires = >=3.7
